fixed button alignment too

--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,8 @@
 
 .button {
   width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .song-dets {
